--- a/test/output/ressources/style.css
+++ b/test/output/ressources/style.css
@@ -1,3 +1,9 @@
 body {
-  color: red;
+  background-color: #b3e4ef;
+}
+
+.corps {
+  background-color: #6da4c6;
+  margin-left: 100px;
+  margin-right: 100px;
 }
